[package]
name = "coind-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exitfailure = "0.5.1"
colored = "2.0.0"
spinners = "2.0.0"
requestty = "0.3.0"